cambios en firma en footer

--- a/index.html
+++ b/index.html
@@ -66,9 +66,14 @@
         </main>
 
         <footer class="mt-auto text-white-50">
+            <br>
+            <h3>Autores</h3>
             <p>Clemente Suarez
                 <a href="https://www.linkedin.com/in/clemente-suarez" class="text-white">Linkedin</a>,
-                <a href="https://www.instagram.com/clemens_arg/?hl=es" class="text-white">Instagram</a>.</p>
+                <a href="https://www.instagram.com/clemens_arg/?hl=es" class="text-white">Instagram</a>.
+            <p>Luciano Latella
+                <a href="https://www.instagram.com/lucho_latella/" class="text-white">Instagram</a>.
+            </p>
         </footer>
     </div>
 
