agregada tabla con alumnos y modif texto

--- a/index.html
+++ b/index.html
@@ -56,11 +56,34 @@
         <main class="px-3">
             <h1>Proyecto TPO número 1.</h1>
             <p class="lead">
-                <h2>El desarrollo web creativo siempre ha sido una forma fascinante de construir arte de nuevos medios. Intentare mostrar cómo planificar, crear y alojar una pieza web en línea, desde la inspiración hasta mostrar su producción en las redes
-                    sociales. Solo utilizando software libre y de código abierto, esta clase magistral le permitirá descubrir nuevas puertas de expresiones creativas y una buena idea de qué, cómo y dónde aprender a continuación por sí mismo.</h2>
+                <h3>Desarrollamos este trabajo para mostrar lo visto hasta la primera parte de la cursada. Intentamos planificar, crear y alojar una pieza web en línea, desde la inspiración hasta mostrar su producción en las redes sociales. Solo utilizando software libre y de código abierto.</h3>
+                <h3>Grupo N° / Compuesto por:</h3>
             </p>
+            <br>
+            <table>
+                <tr>
+                    <th>Núm.</th>
+                    <th>Nombre y Apellido</th>
+                </tr>
+                <tr>
+                    <td>15</td>
+                    <td>Clemente Suarez</td>
+                <tr>
+                    <td>15</td>
+                    <td>Luciano Latella</td>
+                </tr>
+                <tr>
+                    <td>15</td>
+                    <td>Fernando Mosquera</td>
+                </tr>
+                <tr>
+                    <td>15</td>
+                    <td>Marcela Mendez</td>
+                </tr>
+            </table>
+            <br>
             <p class="lead">
-                <h2>Navegando he hallado que en muchas ocasiones las paginas de freelances llegan a un nivel de personalización muy marcada, como fondos de imagen propias.</h2>
+                <h3>Navegando he hallado que en muchas ocasiones las paginas de freelances llegan a un nivel de personalización muy marcada, como fondos de imagen propias.</h3>
                 <a href="https://www.awwwards.com/academy/course/the-fun-process-of-creating-lively-interactive-3d-scenes-for-the-web" class="btn btn-lg btn-secondary fw-bold border-white bg-white">ir a pagina</a>
             </p>
         </main>
