modificado el header y bajados los links a las páginas del trabajo

--- a/index.html
+++ b/index.html
@@ -65,22 +65,13 @@
 <body class="d-flex h-100 text-center text-white bg-dark">
 
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-        <header class="header">
-            <div>
-                <h2 class="float-md-start mb-0">Comisión #23010 - Grupo 15 - </h2>
-                <br>
-                <nav class="nav nav-masthead justify-content-center float-md-end">
-                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-                    <a class="nav-link" href="./paginas/pagina.html"> Primeros Pasos</a>
-                    <a class="nav-link" href="./paginas/pagina2.html">Primeros Pasos</a>
-                    <a class="nav-link" href="#">Contact</a>
-                </nav>
-            </div>
-        </header>
+        <!-- <header class="header">
+            
+        </header> -->
 
         <main class="px-3">
             <div>
-            <h2>Proyecto TPO número 1.</h2>
+                <h1>Proyecto TPO número 1.</h1>
             <p>
                 Desarrollamos este trabajo para mostrar lo visto hasta la primera parte de la cursada. Intentamos planificar, crear y alojar una pieza web en línea, desde la inspiración hasta mostrar su producción en las redes sociales. Solo utilizando software libre y de código abierto.
             </p>
@@ -111,8 +102,19 @@
                 <p>Navegando he hallado que en muchas ocasiones las paginas de freelances llegan a un nivel de personalización muy marcada, como fondos de imagen propias.
                 <a href="https://www.awwwards.com/academy/course/the-fun-process-of-creating-lively-interactive-3d-scenes-for-the-web" class="btn btn-lg btn-secondary fw-bold border-white bg-white">ir a pagina</a>
             </p>
+            <div>
+                <!-- <h2 class="float-md-start mb-0">Comisión #23010 - Grupo 15 - </h2> -->
+                <!-- <br> -->
+                <nav class="nav nav-masthead justify-content-center float-md-end">
+                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                    <a class="nav-link" href="./paginas/pagina.html"> Primeros Pasos</a>
+                    <a class="nav-link" href="./paginas/pagina2.html">Primeros Pasos</a>
+                    <a class="nav-link" href="#">Contact</a>
+                </nav>
+            </div>
             
         </main>
+        <br>
 
         <footer class="mt-auto text-white-50">
             <div>
