modificados los colores de página

--- a/paginas/pagina.html
+++ b/paginas/pagina.html
@@ -17,7 +17,7 @@
         <div class="logo">
             <a href="/" class="link-logo">
                 <h1>
-                    utn
+                    Grupo 15 - Servicios de asesoría
                 </h1>
             </a>
         </div>
