--- a/paginas/pagina.html
+++ b/paginas/pagina.html
@@ -17,7 +17,7 @@
         <div class="logo">
             <a href="/" class="link-logo">
                 <h1>
-                    Grupo 15 - Servicios de asesoría
+                        15 Group - Servicios de asesoría
                 </h1>
             </a>
         </div>
@@ -26,15 +26,15 @@
     <nav class="navbar">
         <ul class="menuPrincipal">
             <li><a href="/">Home</a></li>
-            <li><a href="./pages/noticias.html">Noticias</a></li>
-            <li><a href="./pages/masnoticias.html">Más Noticias</a></li>
-            <li><a href="./pages/contactos.html">Contactos</a></li>
+            <li><a href="./pages/noticias.html">Clientes</a></li>
+            <li><a href="./pages/masnoticias.html">Eventos</a></li>
+            <li><a href="./pages/contactos.html">Capacitaciones</a></li>
         </ul>
     </nav>
 
     <aside class="banner-top">
         <a href="" target="_blank">
-            <img src="./imagenes/doc.jpg" alt="Logo">
+            <img src="multimedia/codo1.png" alt="Logo">
         </a>
     </aside>
 
@@ -43,12 +43,12 @@
             <article class="primero">
                 <figure>
                     <a href="./pages/masnoticias.html">
-                        <img src="./imagenes/img1.jpg" alt="noti1">
+                        <img src="multimedia/conferencia.jfif" alt="noti1">
                     </a>
                 </figure>
                 <div class="textos">
                     <a href="./pages/masnoticias.html">
-                        <h2>Título de la Noticia 1</h2>
+                        <h2>Encuentro de capacitadores</h2>
                     </a>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio culpa, explicabo reprehenderit in quod, incidunt ipsum a ratione ullam doloremque optio vitae! Hic esse totam eos deleniti excepturi placeat nobis.
@@ -59,10 +59,10 @@
 
             <article class="segundo">
                 <figure>
-                    <img src="./imagenes/img2.png" alt="noti2">
+                    <img src="multimedia/systema.jfif" alt="noti2">
                 </figure>
                 <div class="textos">
-                    <h2>Título de la Noticia 1</h2>
+                    <h2>Sistema Versión 2.93 listo</h2>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio culpa, explicabo reprehenderit in quod, incidunt ipsum a ratione ullam doloremque optio vitae! Hic esse totam eos deleniti excepturi placeat nobis.
                     </p>
@@ -72,10 +72,10 @@
 
             <article class="tercero">
                 <figure>
-                    <img src="./imagenes/img1.jpg" alt="noti3">
+                    <img src="multimedia/hotel-presidente-4s.jpg" alt="noti3">
                 </figure>
                 <div class="textos">
-                    <h2>Título de la Noticia 1</h2>
+                    <h2>Nuevo cliente: H Hotels Bs.As.</h2>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio culpa, explicabo reprehenderit in quod, incidunt ipsum a ratione ullam doloremque optio vitae! Hic esse totam eos deleniti excepturi placeat nobis.
                     </p>
@@ -88,7 +88,7 @@
     <footer class="footer">
         <div class="data">
             <ul>
-                <li>Avenida Mi Calle 123456</li>
+                <li>Mi Calle 1256, Quilmes</li>
                 <li>Teléfono: <a href="tel:1234567890">1234567890</a></li>
                 <li>Mail: <a href="mailto:hola@gmail.com">hola@gmail.com</a></li>
             </ul>
