fotos y pie de página

--- a/paginas/pagina.html
+++ b/paginas/pagina.html
@@ -16,9 +16,9 @@
     <header class="header">
         <div class="logo">
             <a href="/" class="link-logo">
-                <h1>
+                <!-- <h1>
                         15 Group - Servicios de asesoría
-                </h1>
+                </h1> -->
             </a>
         </div>
     </header>
@@ -28,13 +28,13 @@
             <li><a href="/">Home</a></li>
             <li><a href="./pages/noticias.html">Clientes</a></li>
             <li><a href="./pages/masnoticias.html">Eventos</a></li>
-            <li><a href="./pages/contactos.html">Capacitaciones</a></li>
+            <li><a href="./pages/contactos.html">Contacto</a></li>
         </ul>
     </nav>
 
     <aside class="banner-top">
         <a href="" target="_blank">
-            <img src="multimedia/codo1.png" alt="Logo">
+            <img src="multimedia/banner-consltoria.jpg" alt="Logo">
         </a>
     </aside>
 
@@ -88,9 +88,15 @@
     <footer class="footer">
         <div class="data">
             <ul>
-                <li>Mi Calle 1256, Quilmes</li>
-                <li>Teléfono: <a href="tel:1234567890">1234567890</a></li>
-                <li>Mail: <a href="mailto:hola@gmail.com">hola@gmail.com</a></li>
+                <li>Calle 2 1256 Quilmes, Buenos Aires </li>
+                <br>
+                <li>Teléfono: <a href="tel:1234567890">1234567890 / 3533-2629</a></li>
+                <br>
+                <li>Mail: <a href="mailto:hola@gmail.com">hola.grupo15@gmail.com.ar</a></li>
+                <br>
+                <li>Número de CUIT 64-89743880-2</li>
+                <br>
+                <li>Afiliado a la Cámara de Comercio </li>
             </ul>
         </div>
         <div class="map">
