--- a/paginas/pagina.html
+++ b/paginas/pagina.html
@@ -28,7 +28,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="./pages/noticias.html">Clientes</a></li>
             <li><a href="./pages/masnoticias.html">Eventos</a></li>
-            <li><a href="./pages/contactos.html">Contacto</a></li>
+            <li><a href="form_contacto.html" target="_blank">Contacto</a></li>
         </ul>
     </nav>
 
