agregado formulario de contacto página 2 e index

--- a/paginas/form_contacto.html
+++ b/paginas/form_contacto.html
@@ -43,6 +43,8 @@
     </form>
 </div>
     <p>Si usted hace click en el boton "Enviar", la informacion sera enviada a la pagina "show_data.html".</p>
+    <br>
+    <a href="pagina.html">Regresar a la página principal</a>
 </body>
 
 </html>
