comentado el footer del index, no mueva a páginas

--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
             <!-- <br> -->
             <nav class="nav nav-masthead justify-content-center float-md-end">
                 <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-                <a class="nav-link" href="./paginas/pagina.html"> Primeros Pasos</a>
+                <!-- <a class="nav-link" href="./paginas/pagina.html"> Primeros Pasos</a>
                 <a class="nav-link" href="./paginas/pagina2.html">Primeros Pasos</a>
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="#">Contact</a> -->
             </nav>
         </div>
         </footer>
