--- a/paginas/pagina.html
+++ b/paginas/pagina.html
@@ -41,17 +41,19 @@
     <main>
         <section id="contenedor">
             <article class="primero">
-                <figure>
-                    <a href="./pages/masnoticias.html">
-                        <img src="multimedia/conferencia.jfif" alt="noti1">
-                    </a>
+                <!-- <figure>
+                    <a href="./pages/masnoticias.html"> -->
+                <img src="multimedia/conferencia.jfif" alt="noti1">
+                </a>
                 </figure>
                 <div class="textos">
-                    <a href="./pages/masnoticias.html">
-                        <h2>Encuentro de capacitadores</h2>
+                    <!-- <a href="./pages/masnoticias.html"> -->
+                    <h2>Encuentro de capacitadores</h2>
                     </a>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio culpa, explicabo reprehenderit in quod, incidunt ipsum a ratione ullam doloremque optio vitae! Hic esse totam eos deleniti excepturi placeat nobis.
+                        En la primera jornada se abordó el tema de innovar en la realización de exposiciones y discursos
+                        inspirando y motivando las
+                        conductas de personas y equipos. La pròxima temática será “Habilidades de formación”.
                     </p>
                     <a href="">Leer más...</a>
                 </div>
@@ -64,7 +66,9 @@
                 <div class="textos">
                     <h2>Sistema Versión 2.93 listo</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio culpa, explicabo reprehenderit in quod, incidunt ipsum a ratione ullam doloremque optio vitae! Hic esse totam eos deleniti excepturi placeat nobis.
+                        Obtenga información sobre cómo obtener las últimas actualizaciones para mantener el
+                        dispositivo funcionando sin problemas y de forma segura. En la versiòn 2.93 se agrega consola
+                        para compartir con su equipo.
                     </p>
                     <a href="">Leer más...</a>
                 </div>
@@ -75,9 +79,11 @@
                     <img src="multimedia/hotel-presidente-4s.jpg" alt="noti3">
                 </figure>
                 <div class="textos">
-                    <h2>Nuevo cliente: H Hotels Bs.As.</h2>
+                    <h2>Nuevo cliente: H Hotels BA</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio culpa, explicabo reprehenderit in quod, incidunt ipsum a ratione ullam doloremque optio vitae! Hic esse totam eos deleniti excepturi placeat nobis.
+                        En mi calidad de Director Corporativo y hostelería de Grupo 15 vengo a expresar mi satisfacción
+                        por la incorporación del equipo de H Hotels BA en el proyecto de implementación de los sistemas
+                        de nuestro grupo.
                     </p>
                     <a href="">Leer más...</a>
                 </div>
@@ -100,8 +106,10 @@
             </ul>
         </div>
         <div class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d5206.419293393357!2d-58.227787207152765!3d-34.70926807603602!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1650585859184!5m2!1ses-419!2sar" width="800" height="200" style="border:0;"
-                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d5206.419293393357!2d-58.227787207152765!3d-34.70926807603602!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1650585859184!5m2!1ses-419!2sar"
+                width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </footer>
 
