--- a/paginas/quienes_somos.html
+++ b/paginas/quienes_somos.html
@@ -7,20 +7,36 @@
     <title>Quienes somos</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/cover/">
+</head>
 
-
+<body class="body">
+    <header class="header">
+        <div class="logo">
+            <a href="/" class="link-logo">
+                    <!-- <h1>
+                            15 Group - Servicios de asesoría
+                    </h1> -->
+                </a>
+        </div>
+    </header>
+    
+    <aside class="banner-top">
+        <a href="" target="_blank">
+            <img src="multimedia/banner-quienes-somos-e1461981495352.png" style="align-items: center;" alt="Logo">
+        </a>
+    </aside>
 
     <!-- Bootstrap core CSS -->
-    <link href="./css/index.css" rel="stylesheet">
+    <link href="./css/quienes_somos.css" rel="stylesheet">
     <style>
         div{
-            background-color: rgb(239, 239, 239);
+            background-color: rgb(255, 254, 254);
         }
         div p{
             border: 2px dotted rgb(20, 1, 1); /*copntenedor general*/
             padding: 30px;
             margin: 20px;
-            background-color: rgb(90, 157, 196);
+            background-color: rgb(106, 125, 135);
         }
         body{
             font-family: Arial;
@@ -28,7 +44,7 @@
         }
     </style>
     <style>
-        table, th, td {border-color: black;
+        table, th, td {border-color: rgb(119, 114, 114);
             border-radius: 0%;
             border-style: solid;
             border-width: 1px;
@@ -57,8 +73,9 @@
 
     <!-- Custom styles for this template -->
     <link href="cover.css" rel="stylesheet">
-</head>
-<body>
+
+
+    <div>
     <h2> Equipo de trabajo compuesto por: </h2> 
                 <table>
                 <tr>
@@ -81,5 +98,6 @@
                     <td>Marcela Mendez </td>
                 </tr>
             </table>
+        </div>
 </body>
 </html>
