--- a/paginas/quienes_somos.html
+++ b/paginas/quienes_somos.html
@@ -7,36 +7,20 @@
     <title>Quienes somos</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/cover/">
-</head>
 
-<body class="body">
-    <header class="header">
-        <div class="logo">
-            <a href="/" class="link-logo">
-                    <!-- <h1>
-                            15 Group - Servicios de asesoría
-                    </h1> -->
-                </a>
-        </div>
-    </header>
-    
-    <aside class="banner-top">
-        <a href="" target="_blank">
-            <img src="multimedia/banner-quienes-somos-e1461981495352.png" style="align-items: center;" alt="Logo">
-        </a>
-    </aside>
+
 
     <!-- Bootstrap core CSS -->
-    <link href="./css/quienes_somos.css" rel="stylesheet">
+    <link href="./css/index.css" rel="stylesheet">
     <style>
         div{
-            background-color: rgb(255, 254, 254);
+            background-color: rgb(239, 239, 239);
         }
         div p{
             border: 2px dotted rgb(20, 1, 1); /*copntenedor general*/
             padding: 30px;
             margin: 20px;
-            background-color: rgb(106, 125, 135);
+            background-color: rgb(90, 157, 196);
         }
         body{
             font-family: Arial;
@@ -44,7 +28,7 @@
         }
     </style>
     <style>
-        table, th, td {border-color: rgb(119, 114, 114);
+        table, th, td {border-color: black;
             border-radius: 0%;
             border-style: solid;
             border-width: 1px;
@@ -73,9 +57,8 @@
 
     <!-- Custom styles for this template -->
     <link href="cover.css" rel="stylesheet">
-
-
-    <div>
+</head>
+<body>
     <h2> Equipo de trabajo compuesto por: </h2> 
                 <table>
                 <tr>
@@ -98,6 +81,5 @@
                     <td>Marcela Mendez </td>
                 </tr>
             </table>
-        </div>
 </body>
 </html>
