agregado volver en contacto

--- a/paginas/quienes_somos.html
+++ b/paginas/quienes_somos.html
@@ -81,5 +81,7 @@
                     <td>Marcela Mendez </td>
                 </tr>
             </table>
+            <br><br>
+            <a href="pagina.html">Regresar a la página principal</a>
 </body>
 </html>
