agregado volver al index en clientes

--- a/paginas/clientes.html
+++ b/paginas/clientes.html
@@ -53,7 +53,8 @@
         Correo electrónico: info@zorg.com
       </li>
   </ul>
-
+  <br>
+  <a href="pagina.html">Regresar a la página principal</a>
 
 </body>
 </html>
