conectada la página clientes

--- a/paginas/pagina.html
+++ b/paginas/pagina.html
@@ -33,7 +33,7 @@
         <ul class="menuPrincipal">
             <li><a href="/">Home</a></li>
             <li><a href="quienes_somos.html">Quienes somos</a></li>
-            <li><a href="./pages/noticias.html">Clientes</a></li>
+            <li><a href="clientes.html">Clientes</a></li>
             <li><a href="./pages/masnoticias.html">Eventos</a></li>
             <li><a href="form_contacto.html" target="_blank">Contacto</a></li>
         </ul>
