corregido y abrir en la misma pestaña

--- a/paginas/pagina.html
+++ b/paginas/pagina.html
@@ -35,7 +35,7 @@
             <li><a href="quienes_somos.html">Quienes somos</a></li>
             <li><a href="clientes.html">Clientes</a></li>
             <li><a href="./pages/masnoticias.html">Eventos</a></li>
-            <li><a href="form_contacto.html" target="_blank">Contacto</a></li>
+            <li><a href="form_contacto.html">Contacto</a></li>
         </ul>
     </nav>
 
