--- a/paginas/quienes_somos.html
+++ b/paginas/quienes_somos.html
@@ -11,7 +11,7 @@
 
 
     <!-- Bootstrap core CSS -->
-    <link href="./css/index.css" rel="stylesheet">
+    <link href="./css/quienes_somos.css" rel="stylesheet">
     <style>
         div{
             background-color: rgb(239, 239, 239);
