estilo lista de empleados

--- a/paginas/quienes_somos.html
+++ b/paginas/quienes_somos.html
@@ -9,9 +9,9 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/cover/">
 
 
-
+    <link rel="stylesheet" href="style/quienes_somos.css">
     <!-- Bootstrap core CSS -->
-    <link href="./css/quienes_somos.css" rel="stylesheet">
+    <!-- <link href="./css/quienes_somos.css" rel="stylesheet"> -->
     <style>
         head{
             background-color: rgb(255, 255, 255);
@@ -63,11 +63,12 @@
 
 
     <!-- Custom styles for this template -->
-    <link href="./css/quienes_somos.css" rel="stylesheet">
+    <!-- <link href="./css/quienes_somos.css" rel="stylesheet"> -->
 </head>
 <body>
+    <br><br>
     <div>
-    <h2> Equipo de trabajo compuesto por: </h2> 
+    <h2> Equipo de trabajo compuesto por: </h2> <br><br>
                 <table>
                 <tr>
                     <th>Equipo : </th>
