agregado style en clientes y centrada la información

--- a/paginas/clientes.html
+++ b/paginas/clientes.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nuestros clientes</title>
+    <link rel="stylesheet" href="style/clientes.css">
 </head>
 <body>
     <h1>Empresas que confían en nosotros</h1>
