--- a/paginas/form_contacto.html
+++ b/paginas/form_contacto.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto con nosotros</title>
+    <link rel="stylesheet" href="style/form_contacto.css">
 </head>
 
 <body>
@@ -68,7 +69,7 @@
 
     </div>
 </div>
-    <p>Al hacer click en el boton "Enviar", la informacion sera enviada a la pagina "show_data.html".</p>
+    <!-- <p>Al hacer click en el boton "Enviar", la informacion sera enviada a la pagina "show_data.html".</p> -->
     <br>
     <a href="pagina.html">Regresar a la página principal</a>
 </body>
