agregado style en quienes somos y color

--- a/paginas/quienes_somos.html
+++ b/paginas/quienes_somos.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style/quienes_somos.css">
     <!-- Bootstrap core CSS -->
     <!-- <link href="./css/quienes_somos.css" rel="stylesheet"> -->
-    <style>
+    <!-- <style>
         head{
             background-color: rgb(255, 255, 255);
         }
@@ -32,7 +32,7 @@
         footer{
             background-color: rgb(255, 255, 255);
         }
-    </style>
+    </style> -->
     <style>
         table, th, td {border-color: black;
             border-radius: 0%;
@@ -68,11 +68,11 @@
 <body>
     <br><br>
     <div>
-    <h2> Equipo de trabajo compuesto por: </h2> <br><br>
+    <h2> Equipo de trabajo compuesto por : </h2> <br><br>
                 <table>
                 <tr>
                     <th>Equipo : </th>
-                    <th>Nombre y Apellido: </th>
+                    <th>Nombre y Apellido : </th>
                 </tr>
                 <tr>
                     <td>Asesoramiento y cuentas </td>
