agregado links de noticias de pagina y eventos

--- a/paginas/pagina.html
+++ b/paginas/pagina.html
@@ -58,7 +58,7 @@
                         inspirando y motivando las
                         conductas de personas y equipos. La pròxima temática será “Habilidades de formación”.
                     </p>
-                    <a href="">Leer más...</a>
+                    <a href="https://es.slideshare.net/direcciondenivelinicial/reunion-con-capacitadores" target="_blank">Leer más...</a>
                 </div>
             </article>
 
@@ -73,7 +73,7 @@
                         dispositivo funcionando sin problemas y de forma segura. En la versiòn 2.93 se agrega consola
                         para compartir con su equipo.
                     </p>
-                    <a href="">Leer más...</a>
+                    <a href="https://internetpasoapaso.com/actualizar-android/" target="_blank">Leer más...</a>
                 </div>
             </article>
 
@@ -88,7 +88,7 @@
                         por la incorporación del equipo de H Hotels BA en el proyecto de implementación de los sistemas
                         de nuestro grupo.
                     </p>
-                    <a href="">Leer más...</a>
+                    <a href="https://www.newhotel.com/es/Main/la-empresa/clientes.aspx" target="_blank">Leer más...</a>
                 </div>
             </article>
         </section>
