agregdo pagina y eventos

--- a/paginas/pagina.html
+++ b/paginas/pagina.html
@@ -34,7 +34,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="quienes_somos.html">Quienes somos</a></li>
             <li><a href="clientes.html">Clientes</a></li>
-            <li><a href="./pages/masnoticias.html">Eventos</a></li>
+            <li><a href="https://www.g2consultora.com/congresos/" target="_blank">Eventos</a></li>
             <li><a href="form_contacto.html">Contacto</a></li>
         </ul>
     </nav>
